--- a/deployments/golang-starter-pipeline.yml
+++ b/deployments/golang-starter-pipeline.yml
@@ -102,26 +102,23 @@ jobs:
           params:
             KUBECONFIG: ((kubeconfig))
             DOMAIN: ((domain))
-            GCP_PROJECT_ID: ((gcp_project_id))
-            GCP_ZONE: ((gcp_zone))
-            GCP_CLUSTER_NAME: ((gcp_cluster_name))
-            GCP_SERVICE_ACCOUNT_JSON: ((service_account_json))
+            SERVICE_ACCOUNT_JSON: ((service_account_json))
           run:
             path: sh
             args:
-            - -sc
-            - |
-              echo "${DOLLAR}KUBECONFIG" > config.yml
-              export KUBECONFIG=config.yml
-              export IMAGE=$(kubectl get image golang-starter-image -n golang-starter -o jsonpath="{.status.latestImage}")
-              envsubst < ./golang-starter-source-code/deployments/golang-starter.yml > golang-starter.yml
-              unset KUBECONFIG
-
-              export cred_file=$(mktemp)
-              trap "rm ${cred_file}" EXIT
-              echo "${DOLLAR}{GCP_SERVICE_ACCOUNT_JSON}" > ${DOLLAR}{cred_file}
-              chmod 600 ${DOLLAR}{cred_file}
-              gcloud auth login --cred-file "${DOLLAR}{cred_file}" --quiet
-              gcloud container clusters get-credentials ${DOLLAR}{GCP_CLUSTER_NAME} --zone ${DOLLAR}{GCP_ZONE} --project ${DOLLAR}{GCP_PROJECT_ID}
-              kubectl create namespace golang-starter
-              kubectl apply -f golang-starter.yml
+              - -sc
+              - |
+                echo "${DOLLAR}KUBECONFIG" > config.yml
+                export KUBECONFIG=config.yml
+                export IMAGE=$(kubectl get image golang-starter-image -n golang-starter -o jsonpath="{.status.latestImage}")
+                envsubst < ./golang-starter-source-code/deployments/golang-starter.yml > golang-starter.yml
+                unset KUBECONFIG
+                
+                export cred_file=$(mktemp)
+                trap "rm ${cred_file}" EXIT
+                echo "${DOLLAR}{SERVICE_ACCOUNT_JSON}" > ${DOLLAR}{cred_file}
+                chmod 600 ${DOLLAR}{cred_file}
+                gcloud auth login --cred-file "${DOLLAR}{cred_file}" --quiet
+                gcloud container clusters get-credentials ${K8S_CLUSTER_NAME} --zone ${GCP_ZONE} --project ${GCP_PROJECT_ID}
+                kubectl create namespace golang-starter
+                kubectl apply -f golang-starter.yml
