--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres
+        image: postgres:14.5
         env:
           POSTGRES_USER: postgresql
           POSTGRES_PASSWORD: postgresql
